# NCONotes

./: .gitignore  LICENSE  README.md  claude.md  pyproject.toml
.claude/skills/specification-writing/: skill.md
.private-journal/2026-01-20/: 20-12-04-078318.embedding  20-12-04-078318.md  20-31-08-599755.embedding  20-31-08-599755.md  20-41-07-669539.embedding  20-41-07-669539.md  20-51-41-701412.embedding  20-51-41-701412.md  21-00-16-436001.embedding  21-00-16-436001.md  21-03-47-065989.embedding  21-03-47-065989.md  21-44-43-946190.embedding  21-44-43-946190.md  21-53-41-561987.embedding  21-53-41-561987.md
src/nconotes/: __init__.py  __main__.py  main.py  models.py  widgets.py
tests/: __init__.py
